--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
         run: python feed.py
       - name: Push repo
         run: |
-          git config user.name kafi350
-          git config user.email kafiabdullahil96@gmail.com
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -m "modified Feed"
           git push
