--- a/feed.yaml
+++ b/feed.yaml
@@ -1,4 +1,4 @@
-title: How is the - Optimus Prime
+title: How is the - Optimus Prime Robot
 subtitle: Powered by LinkedIn Learning
 author: Ray Villalobos
 description: Conversations with leaders building next generation techology tools.
